crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP006_1.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP006_1.py:9:10: UP006 [*] Use `collections.defaultdict` instead of `typing.DefaultDict` for type annotation
   |
 9 | def f(x: typing.DefaultDict[str, str]) -> None:
   |          ^^^^^^^^^^^^^^^^^^ UP006
10 |     ...
   |
   = help: Replace with `collections.defaultdict`

ℹ Suggested fix
6  6  |     from collections import defaultdict
7  7  | 
8  8  | 
9     |-def f(x: typing.DefaultDict[str, str]) -> None:
   9  |+def f(x: defaultdict[str, str]) -> None:
10 10 |     ...
11 11 | 
12 12 | 

UP006_1.py:17:10: UP006 [*] Use `collections.abc.Set` instead of `typing.AbstractSet` for type annotation
   |
17 | def f(x: typing.AbstractSet[str]) -> None:
   |          ^^^^^^^^^^^^^^^^^^ UP006
18 |     ...
   |
   = help: Replace with `collections.abc.Set`

ℹ Suggested fix
14 14 | from typing_extensions import Awaitable
15 15 | 
16 16 | 
17    |-def f(x: typing.AbstractSet[str]) -> None:
   17 |+def f(x: Set[str]) -> None:
18 18 |     ...
19 19 | 
20 20 | 

UP006_1.py:25:10: UP006 Use `collections.abc.Awaitable` instead of `Awaitable` for type annotation
   |
25 | def f(x: Awaitable) -> None:
   |          ^^^^^^^^^ UP006
26 |     ...
   |
   = help: Replace with `collections.abc.Awaitable`


