crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP006_2.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP006_2.py:7:10: UP006 Use `collections.defaultdict` instead of `typing.DefaultDict` for type annotation
  |
7 | def f(x: typing.DefaultDict[str, str]) -> None:
  |          ^^^^^^^^^^^^^^^^^^ UP006
8 |     ...
  |
  = help: Replace with `collections.defaultdict`


