crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP006_3.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP006_3.py:7:11: UP006 [*] Use `collections.defaultdict` instead of `typing.DefaultDict` for type annotation
  |
7 | def f(x: "typing.DefaultDict[str, str]") -> None:
  |           ^^^^^^^^^^^^^^^^^^ UP006
8 |     ...
  |
  = help: Replace with `collections.defaultdict`

ℹ Suggested fix
4 4 |     from collections import defaultdict
5 5 | 
6 6 | 
7   |-def f(x: "typing.DefaultDict[str, str]") -> None:
  7 |+def f(x: "defaultdict[str, str]") -> None:
8 8 |     ...


