crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP008_UP008.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    SuperCallWithParameters: ~
  location:
    row: 17
    column: 17
  end_location:
    row: 17
    column: 35
  fix:
    content:
      - super()
    location:
      row: 17
      column: 17
    end_location:
      row: 17
      column: 35
  parent: ~
- kind:
    SuperCallWithParameters: ~
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 26
  fix:
    content:
      - super()
    location:
      row: 18
      column: 8
    end_location:
      row: 18
      column: 26
  parent: ~
- kind:
    SuperCallWithParameters: ~
  location:
    row: 19
    column: 8
  end_location:
    row: 22
    column: 9
  fix:
    content:
      - super()
    location:
      row: 19
      column: 8
    end_location:
      row: 22
      column: 9
  parent: ~
- kind:
    SuperCallWithParameters: ~
  location:
    row: 36
    column: 8
  end_location:
    row: 36
    column: 28
  fix:
    content:
      - super()
    location:
      row: 36
      column: 8
    end_location:
      row: 36
      column: 28
  parent: ~
- kind:
    SuperCallWithParameters: ~
  location:
    row: 50
    column: 12
  end_location:
    row: 50
    column: 32
  fix:
    content:
      - super()
    location:
      row: 50
      column: 12
    end_location:
      row: 50
      column: 32
  parent: ~

